Centred nav and progress bar dynamically

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>WebPrototypeIntroduction</title>
+    <title>Volunteer at RSPCA NSW</title>
     <link href="indexstyle.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
     <!--Nav setup-->
-    <div class:"nav">
+    <div class="nav">
       <nav>
         <ul>
           <!--for each class (previous, active, future) add the corresponding class to the page currently active and the ones previous and future-->
@@ -64,7 +64,13 @@
           </li>
         </ul>
       </nav>
+      <!-- progress bar -->
+      <div class="pbcontainer">
+        <div class="pfinished" style="height:20px;width:20%">20%</div>
+      </div>
     </div>
+    
+
 
 
   </body>
