--- a/step2.html
+++ b/step2.html
@@ -19,7 +19,7 @@
     type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>WebPrototypeContactDetails</title>
+    <title>Volunteering for RSPCA - Contact Details</title>
     <link href="step2style.css" rel="stylesheet" type="text/css" />
   </head>
 
