--- a/step3.html
+++ b/step3.html
@@ -20,7 +20,7 @@
     type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>WebPrototypeRoleDiscovery</title>
+    <title>Volunteer for RPCA NSW - Discover Available Roles</title>
     <link href="step3style.css" rel="stylesheet" type="text/css" />
   </head>
 
