--- a/step4.html
+++ b/step4.html
@@ -26,7 +26,7 @@
     type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>WebPrototypeTrainingSignup</title>
+    <title>Volunteer for RSPCA NSW - Training and Induction Sign Up</title>
     <link href="step4style.css" rel="stylesheet" type="text/css" />
   </head>
 
