Finished logo sizing and whatnot.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </head>
 
   <body>
+    
     <!--Nav setup-->
     <div class="nav">
       <nav>
@@ -68,6 +69,20 @@
       <div class="pbcontainer">
         <div class="pfinished" style="height:20px;width:20%">20%</div>
       </div>
+    </div>
+
+    <!--logo setup-->
+    <div class="logo">
+      <figure>
+        <img src="Images/rspcansw.jpg" alt="RSPCALogo" 
+        style="width: 100px height: 50px">
+      </figure>
+    </div>
+
+    <div class="title">
+      <h2>
+      Intro
+      </h2>
     </div>
     
 
