--- a/step2.html
+++ b/step2.html
@@ -63,6 +63,18 @@
           </li>
         </ul>
       </nav>
+      <!-- progress bar -->
+      <div class="pbcontainer">
+        <div class="pfinished" style="height:20px;width:40%">40%</div>
+      </div>
+    </div>
+
+    <!--logo setup-->
+    <div class="logo">
+      <figure>
+        <img src="Images/rspcansw.jpg" alt="RSPCALogo" 
+        style="width: 100px height: 50px">
+      </figure>
     </div>
 
   </body>
