--- a/step4.html
+++ b/step4.html
@@ -70,8 +70,19 @@
           </li>
         </ul>
       </nav>
+      <!-- progress bar -->
+      <div class="pbcontainer">
+        <div class="pfinished" style="height:20px;width:80%">80%</div>
+      </div>
     </div>
       
+    <!--logo setup-->
+    <div class="logo">
+      <figure>
+        <img src="Images/rspcansw.jpg" alt="RSPCALogo" 
+        style="width: 100px height: 50px">
+      </figure>
+    </div>
 
   </body>
 </html>
