--- a/step5.html
+++ b/step5.html
@@ -65,6 +65,18 @@
           </li>
         </ul>
       </nav>
+      <!-- progress bar -->
+      <div class="pbcontainer">
+        <div class="pfinished" style="height:20px;width:100%">100%</div>
+      </div>
+    </div>
+
+    <!--logo setup-->
+    <div class="logo">
+      <figure>
+        <img src="Images/rspcansw.jpg" alt="RSPCALogo" 
+        style="width: 100px height: 50px">
+      </figure>
     </div>
 
   </body>
