Finished Introduction title and started Contact Details Title

--- a/step2.html
+++ b/step2.html
@@ -77,5 +77,13 @@
       </figure>
     </div>
 
+    <!-- title -->
+    <div class="title">
+      <h2>
+        <!-- used break to push "details" to the next line to fit better within the title element on mobile-->
+      Contact </br> Details
+      </h2>
+    </div>
+
   </body>
 </html>
