--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
       </figure>
     </div>
 
+    <!-- title -->
     <div class="title">
       <h2>
-      Intro
+      Introduction
       </h2>
     </div>
     
