Forgot to wrap the body with the grid container, added that, made changes to the image, title, and logo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    
+  <div class="grid-container">
     <!--Nav setup-->
     <div class="nav">
       <nav>
@@ -74,8 +74,7 @@
     <!--logo setup-->
     <div class="logo">
       <figure>
-        <img src="Images/rspcansw.jpg" alt="RSPCALogo" 
-        style="width: 100px height: 50px">
+        <img src="Images/rspcansw.jpg" alt="RSPCALogo">
       </figure>
     </div>
 
@@ -85,9 +84,22 @@
       Introduction
       </h2>
     </div>
+
+    <!-- image reference: https://pixabay.com/photos/dog-dog-walking-male-5307900/-->
+    <div class="image">
+      <figure>
+        <img src="Images/walkdog.jpg" alt="Man Walking Dog">
+      </figure>
+    </div>
     
+    <div class="header">
+      <h1>
+        How to become a Volunteer for the RSPCA
+      </h1>
+    </div>
 
 
 
   </body>
+  </div>
 </html>
