--- a/step3.html
+++ b/step3.html
@@ -13,6 +13,7 @@
 -->
 
 <html>
+  <div class="grid-container">
   <head>
     <!--favicon-->
     <link rel="shortcut icon"
@@ -78,6 +79,13 @@
       </figure>
     </div>
 
+    <div class="title">
+      <h2>
+        <!-- used break to push "details" to the next line to fit better within the title element on mobile-->
+      Discover </br> Roles
+      </h2>
+    </div>
 
   </body>
+  </div>
 </html>
