--- a/step4.html
+++ b/step4.html
@@ -19,6 +19,7 @@
 -->
 
 <html>
+  <div class="grid-container">
   <head>
     <!--favicon-->
     <link rel="shortcut icon"
@@ -84,5 +85,13 @@
       </figure>
     </div>
 
+    <div class="title">
+      <h2>
+        <!-- used break to push "details" to the next line to fit better within the title element on mobile-->
+      Training </br> Signup
+      </h2>
+    </div>
+
   </body>
+  </div>
 </html>
