--- a/step5.html
+++ b/step5.html
@@ -14,6 +14,7 @@
 -->
 
 <html>
+  <div class="grid-container">
   <head>
     <!--favicon-->
     <link rel="shortcut icon"
@@ -79,5 +80,13 @@
       </figure>
     </div>
 
+    <div class="title">
+      <h2>
+        <!-- used break to push "details" to the next line to fit better within the title element on mobile-->
+      Next </br> Steps
+      </h2>
+    </div>
+
   </body>
+  </div>
 </html>
