--- a/step2.html
+++ b/step2.html
@@ -12,6 +12,7 @@
 -->
 
 <html>
+  <div class="grid-container">
   <head>
     <!--favicon-->
     <link rel="shortcut icon"
@@ -86,4 +87,5 @@
     </div>
 
   </body>
+  </div>
 </html>
