Finished aligning front page image and started resizing and moving title pages to their corresponding place on each page.

--- a/step2.html
+++ b/step2.html
@@ -12,7 +12,6 @@
 -->
 
 <html>
-  <div class="grid-container">
   <head>
     <!--favicon-->
     <link rel="shortcut icon"
@@ -21,7 +20,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Volunteering for RSPCA - Contact Details</title>
-    <link href="step2style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -79,7 +78,7 @@
     </div>
 
     <!-- title -->
-    <div class="title">
+    <div class="title2">
       <h2>
         <!-- used break to push "details" to the next line to fit better within the title element on mobile-->
       Contact </br> Details
@@ -87,5 +86,4 @@
     </div>
 
   </body>
-  </div>
 </html>
