--- a/step5.html
+++ b/step5.html
@@ -14,7 +14,6 @@
 -->
 
 <html>
-  <div class="grid-container">
   <head>
     <!--favicon-->
     <link rel="shortcut icon"
@@ -23,7 +22,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Volunteer for RSPCA NSW - Next Steps</title>
-    <link href="step5style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -80,7 +79,8 @@
       </figure>
     </div>
 
-    <div class="title">
+    <!-- title -->
+    <div class="title5">
       <h2>
         <!-- used break to push "details" to the next line to fit better within the title element on mobile-->
       Next </br> Steps
@@ -88,5 +88,4 @@
     </div>
 
   </body>
-  </div>
 </html>
