--- a/step3.html
+++ b/step3.html
@@ -13,7 +13,6 @@
 -->
 
 <html>
-  <div class="grid-container">
   <head>
     <!--favicon-->
     <link rel="shortcut icon"
@@ -22,7 +21,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Volunteer for RPCA NSW - Discover Available Roles</title>
-    <link href="step3style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -79,13 +78,14 @@
       </figure>
     </div>
 
-    <div class="title">
+    <!-- title -->
+    <div class="title3">
       <h2>
         <!-- used break to push "details" to the next line to fit better within the title element on mobile-->
       Discover </br> Roles
       </h2>
     </div>
 
+
   </body>
-  </div>
 </html>
