--- a/step4.html
+++ b/step4.html
@@ -19,7 +19,6 @@
 -->
 
 <html>
-  <div class="grid-container">
   <head>
     <!--favicon-->
     <link rel="shortcut icon"
@@ -28,7 +27,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Volunteer for RSPCA NSW - Training and Induction Sign Up</title>
-    <link href="step4style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -85,7 +84,8 @@
       </figure>
     </div>
 
-    <div class="title">
+    <!-- title -->
+    <div class="title4">
       <h2>
         <!-- used break to push "details" to the next line to fit better within the title element on mobile-->
       Training </br> Signup
@@ -93,5 +93,4 @@
     </div>
 
   </body>
-  </div>
 </html>
