Nav bar, progress bar, logo, page titles, and main page image finished.

--- a/step2.html
+++ b/step2.html
@@ -78,7 +78,7 @@
     </div>
 
     <!-- title -->
-    <div class="title2>
+    <div class="title2">
       <h2>
         <!-- used break to push "details" to the next line to fit better within the title element on mobile-->
       Contact </br> Details
