Main header finished

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
   </head>
 
   <body>
-    
+    <!-- title -->
+    <div class="title">
+      <h2>
+      Introduction
+      </h2>
+    </div>
+
     <!--Nav setup-->
     <div class="nav">
       <nav>
@@ -65,18 +71,18 @@
         style="width: 100px height: 50px">
       </figure>
     </div>
-
-    <!-- title -->
-    <div class="title">
-      <h2>
-      Introduction
-      </h2>
-    </div>
     
+    <!--Homepage image-->
     <div class="HomeImage">
       <img src="Images/Manwalkdog.jpg" alt="Manwalkingdog">
     </div>
 
+    <!--Page header-->
+    <div class="header">
+      <h1>
+        How to become a Volunteer for the RSPCA NSW
+      </h1>
+    </div>
 
   </body>
 </html>
