--- a/step2.html
+++ b/step2.html
@@ -24,6 +24,14 @@
   </head>
 
   <body>
+    <!-- title -->
+    <div class="title2">
+      <h2>
+        <!-- used break to push "details" to the next line to fit better within the title element on mobile-->
+      Contact </br> Details
+      </h2>
+    </div>  
+    
     <div class="nav">
     <!--Nav setup-->
       <nav>
@@ -77,12 +85,11 @@
       </figure>
     </div>
 
-    <!-- title -->
-    <div class="title2">
-      <h2>
-        <!-- used break to push "details" to the next line to fit better within the title element on mobile-->
-      Contact </br> Details
-      </h2>
+    <!--Page header-->
+    <div class="header1">
+      <h1>
+        Enter your contact details so the RSPCA can get in touch with you
+      </h1>
     </div>
 
   </body>
