More headers done on the other pages

--- a/step2.html
+++ b/step2.html
@@ -1,15 +1,5 @@
 <!DOCTYPE html>
-<!-- reference for style sheet div class wrappers
-<div class="grid-container">
-  <div class="nav"></div>
-  <div class="logo"></div>
-  <div class="title"></div>
-  <div class="Header"></div>
-  <div class="Nbuttons"></div>
-  <div class="footer"></div>
-  <div class="main"></div>
-</div>
--->
+
 
 <html>
   <head>
@@ -86,9 +76,9 @@
     </div>
 
     <!--Page header-->
-    <div class="header1">
+    <div class="header2">
       <h1>
-        Enter your contact details so the RSPCA can get in touch with you
+        Enter your contact details so RSPCA NSW can get in touch with you
       </h1>
     </div>
 
