--- a/step3.html
+++ b/step3.html
@@ -1,16 +1,5 @@
 <!DOCTYPE html>
-<!-- reference for style sheet div classes
-<div class="grid-container">
-  <div class="nav"></div>
-  <div class="logo"></div>
-  <div class="title"></div>
-  <div class="Header"></div>
-  <div class="Nbuttons"></div>
-  <div class="footer"></div>
-  <div class="sbuttons"></div>
-  <div class="results"></div>
-</div>
--->
+
 
 <html>
   <head>
@@ -86,6 +75,12 @@
       </figure>
     </div>
 
+    <!--Page header-->
+    <div class="header3">
+      <h1>
+        Find and select the right roles for you
+      </h1>
+    </div>
 
 
   </body>
