All headers done

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <!--Page header-->
     <div class="header">
       <h1>
-        How to become a Volunteer for the RSPCA NSW
+        How to become a volunteer for the RSPCA NSW
       </h1>
     </div>
 
