--- a/step4.html
+++ b/step4.html
@@ -75,7 +75,13 @@
       </figure>
     </div>
 
-    
+    <!--Page header-->
+    <div class="header4">
+      <h1>
+        Sign up for the inductions and in-person training for the roles you've chosen
+      </h1>
+    </div>
+
 
   </body>
 </html>
