--- a/step5.html
+++ b/step5.html
@@ -75,7 +75,12 @@
       </figure>
     </div>
 
-    
+    <!--Page header-->
+    <div class="header5">
+      <h1>
+        Congratulations!
+      </h1>
+    </div>
 
   </body>
 </html>
