--- a/step2.html
+++ b/step2.html
@@ -11,6 +11,8 @@
     <meta name="viewport" content="width=device-width">
     <title>Volunteering for RSPCA - Contact Details</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   </head>
 
   <body>
