Put contact details at the end before the finished page and bumped Role Discovery and Induction signup up to step 2 and step3, it didn't make sense to have people put in their signup details until they'd selected the roles and training they needed to sign up for.

--- a/step2.html
+++ b/step2.html
@@ -20,7 +20,7 @@
     <div class="title2">
       <h2>
         <!-- used break to push "details" to the next line to fit better within the title element on mobile-->
-      Contact </br> Details
+      Discover </br> Roles
       </h2>
     </div>  
     
@@ -40,19 +40,19 @@
           <li class="active">
             <a href="step2.html">
               <span class="step-num">2. </span>
-              <span class="step">Contact Details</span>
+              <span class="step">Role Discovery</span>
             </a>
           </li>
           <li class="future">
             <a href="step3.html">
               <span class="step-num">3. </span>
-              <span class="step">Role Discovery</span>
+              <span class="step">Training Signup</span>
             </a>
           </li>
           <li class="future">
             <a href="step4.html">
               <span class="step-num">4. </span>
-              <span class="step">Training Signup</span>
+              <span class="step">Contact Details</span>
             </a>
           </li>
           <li class="future">
@@ -80,24 +80,10 @@
     <!--Page header-->
     <div class="header2">
       <h1>
-        Enter your contact details so RSPCA NSW can get in touch with you
+        Select the right roles for you.
       </h1>
     </div>
-
-    <!-- Form with action that does nothing (the data isn't sent anywhere) -->
-    <!-- form referenced from:https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_form_action, https://www.w3schools.com/howto/howto_html_file_upload_button.asp -->
-    <form action="step2.html">
-      <label for="firstname"></label>
-      <input type="text" id="firstname" name="fname" value="Given Name">
-      <label for="lastname"></label>
-      <input type="text" id="lname" name="lname" value="Surname">
-      <input type="date" id="birthday" name="bday"
-      value="xxxx-xx-xx"
-      min="2004-11-26" max="2018-12-31">
-      <p id class="p1">Upload your CV (for reference of previous experience)</p>
-      <input type="file" id="cv" name="filename">
-      <input class="submit" type="submit" value="Submit">
-    </form> 
+    <!-- Nav buttons at bottom of page -->
 
     <div class="buttonnavcontainer">
       <a href="index.html" class="previouspage">< <span class="bnavtag">Previous</span>
