Added dropdown menu, working on arranging available role list on page

--- a/step2.html
+++ b/step2.html
@@ -83,6 +83,44 @@
         Select the right roles for you.
       </h1>
     </div>
+
+    <!-- referenced from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_js_dropdown_hover -->
+    <div class="dropdown">
+      <button class="dropbtn">Roles by:</button>
+        <div class="dropdown-content">
+          <a href="#">Location <input class="dropcheck" type="checkbox"></a>
+          <a href="#">Age Group <input class="dropcheck" type="checkbox"></a>
+          <a href="#">Specialty <input class="dropcheck" type="checkbox"></a>
+          <a href="#">Time <input class="dropcheck" type="checkbox"></a>
+      </div>
+    </div>
+
+    <!-- List of available Roles -->
+    <div class="rolelist">
+      <h3>
+        <ul>
+          <input class="roleselect" type="checkbox"><li>Albury Volunteer Branch - Cat and Kitten Day Care Assistant
+          </li>
+          <input class="roleselect" type="checkbox"><li>Albury Volunteer Branch - Assistant Feline Coordinator
+          </li>
+          <input class="roleselect" type="checkbox"><li>Hunter Shelter - Transportation Driver
+          </li>
+          <input class="roleselect" type="checkbox"><li>Hunter Shelter - Gardening & Maintenance
+          </li>
+          <input class="roleselect" type="checkbox"><li>Orange Shelter - Gardening
+          </li>
+          <input class="roleselect" type="checkbox"><li>Orange Shelter - Shelter Assistant
+          </li>
+          <input class="roleselect" type="checkbox"><li>Port Macquarie Shelter - Cattery Assistant
+          </li>
+          <input class="roleselect" type="checkbox"><li>Sydney (Yagoona) Shelter - Gardening
+          </li>
+          <input class="roleselect" type="checkbox"><li>Sydney (Yagoona) Shelter - Facilities Transportation Driver
+          </li>
+        </ul>
+      </h3>
+    </div>
+
     <!-- Nav buttons at bottom of page -->
 
     <div class="buttonnavcontainer">
