Everything working, everything finished

--- a/index.html
+++ b/index.html
@@ -41,20 +41,14 @@
             </a>
           </li>
           <li class="future">
-            <a href="step3.html">
-              <span class="step-num">3. </span>
-              <span class="step">Training Signup</span>
-            </a>
-          </li>
-          <li class="future">
             <a href="step4.html">
-              <span class="step-num">4. </span>
+              <span class="step-num">3. </span>
               <span class="step">Contact Details</span>
             </a>
           </li>
           <li class="future">
             <a href="step5.html">
-              <span class="step-num">5. </span>
+              <span class="step-num">4. </span>
               <span class="step">Next Steps</span>
             </a>
           </li>
@@ -62,7 +56,7 @@
       </nav>
       <!-- progress bar -->
       <div class="pbcontainer">
-        <div class="pfinished" style="height:20px;width:20%">20%</div>
+        <div class="pfinished" style="height:20px;width:25%">25%</div>
       </div>
     </div>
 
@@ -94,12 +88,10 @@
         <div class="numberCircle">1</div>
         <li>Learn about how you can become a volunteer for RSPCA NSW. You must be older than 16 years old to volunteer with us.</li>
         <div class="numberCircle">2</div>
-        <li>Enter your contact details and upload your CV in order for RSPCA to get in touch with you.</li>
-        <div class="numberCircle">3</div>
         <li>Choose the volunteer roles that are right for you, using location, interest/specialty, and time commitment.</li>
+        <div class="numberCircle">2</div>
+        <li>Enter your contact details and upload your CV in order for RSPCA to get in touch with you. You will recieve a follow up email with a list of the available in-person training times and links to online inductions for your selected roles.</li>
         <div class="numberCircle">4</div>
-        <li>Sign up for (and subsequently complete) the inductions and in-person training required for the roles you're interested in.</li>
-        <div class="numberCircle">5</div>
         <li>Show up for your first day of volunteering with RSPCA NSW!</li>
       </ul>
     </h3>
