--- a/removed.html
+++ b/removed.html
@@ -80,11 +80,36 @@
     <!--Page header-->
     <div class="header3">
       <h1>
-        Find and select the right roles for you
+        Sign up for the inductions and in-person training required for your potential role(s)
       </h1>
     </div>
 
-    
+    <!-- List of available Roles -->
+    <div class="rolelist">
+      <h3>
+        <ul>
+          <div class="header4">Sydney (Yagoona) Shelter - Gardening</div>
+          <input class="roleselect" type="checkbox"><li>In-person Training
+          </li>
+          <input class="roleselect" type="checkbox"><li>Albury Volunteer Branch - Assistant Feline Coordinator
+          </li>
+          <input class="roleselect" type="checkbox"><li>Hunter Shelter - Transportation Driver
+          </li>
+          <input class="roleselect" type="checkbox"><li>Hunter Shelter - Gardening & Maintenance
+          </li>
+          <input class="roleselect" type="checkbox"><li>Orange Shelter - Gardening
+          </li>
+          <input class="roleselect" type="checkbox"><li>Orange Shelter - Shelter Assistant
+          </li>
+          <input class="roleselect" type="checkbox"><li>Port Macquarie Shelter - Cattery Assistant
+          </li>
+          <input class="roleselect" type="checkbox"><li>Sydney (Yagoona) Shelter - Gardening
+          </li>
+          <input class="roleselect" type="checkbox"><li>Sydney (Yagoona) Shelter - Facilities Transportation Driver
+          </li>
+        </ul>
+      </h3>
+    </div>
 
     <!-- Nav buttons at bottom of page -->
 
