--- a/step2.html
+++ b/step2.html
@@ -9,7 +9,7 @@
     type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Volunteering for RSPCA - Contact Details</title>
+    <title>Volunteering for RSPCA - Discover Available Roles</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
@@ -44,20 +44,14 @@
             </a>
           </li>
           <li class="future">
-            <a href="step3.html">
-              <span class="step-num">3. </span>
-              <span class="step">Training Signup</span>
-            </a>
-          </li>
-          <li class="future">
             <a href="step4.html">
-              <span class="step-num">4. </span>
+              <span class="step-num">3. </span>
               <span class="step">Contact Details</span>
             </a>
           </li>
           <li class="future">
             <a href="step5.html">
-              <span class="step-num">5. </span>
+              <span class="step-num">4. </span>
               <span class="step">Next Steps</span>
             </a>
           </li>
@@ -65,7 +59,7 @@
       </nav>
       <!-- progress bar -->
       <div class="pbcontainer">
-        <div class="pfinished" style="height:20px;width:40%">40%</div>
+        <div class="pfinished" style="height:20px;width:50%">50%</div>
       </div>
     </div>
 
@@ -126,7 +120,7 @@
     <div class="buttonnavcontainer">
       <a href="index.html" class="previouspage">< <span class="bnavtag">Previous</span>
       </a>
-      <a href="step3.html" class="nextpage1"><span class="bnavtag">Next</span> >
+      <a href="step4.html" class="nextpage1"><span class="bnavtag">Next</span> >
       </a>
     </div>
 
