--- a/step5.html
+++ b/step5.html
@@ -13,6 +13,8 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Add social mediaicon library - referenced from:https://www.w3schools.com/howto/howto_css_social_media_buttons.asp -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
@@ -44,20 +46,14 @@
             </a>
           </li>
           <li class="previous">
-            <a href="step3.html">
-              <span class="step-num">3. </span>
-              <span class="step">Training Signup</span>
-            </a>
-          </li>
-          <li class="previous">
             <a href="step4.html">
-              <span class="step-num">4. </span>
+              <span class="step-num">3. </span>
               <span class="step">Contact Details</span>
             </a>
           </li>
           <li class="active">
             <a href="step5.html">
-              <span class="step-num">5. </span>
+              <span class="step-num">4. </span>
               <span class="step">Next Steps</span>
             </a>
           </li>
@@ -82,6 +78,48 @@
       <h1>
         Congratulations!
       </h1>
+    </div>
+
+    <div class="pcontainer">
+      <p>
+        You have successfully signed up to become a volunteer for RSPCA NSW!
+      </p>
+    </div>
+
+    <!--Page header-->
+    <div class="header6">
+      <h1>
+        Next Steps
+      </h1>
+    </div>
+
+    <div class="pcontainer">
+      <p>
+        You will recieve an email from RSPCA NSW with the available dates and times of the required in-person training (if any) for your chosen role(s) as well as a link for the required induction(s).
+      </p>
+      <p>
+        Please complete your in-person training and/or online inductions before arriving for your first day of volunteering. We can not allow you to begin volunteering for us without the proper preperation.
+      </p>
+      <p>
+        If you have questions, please check the Frequently Asked Questions below. If your question was not already answered, please reach out to us at one of the following: 
+      </p>
+    </div>
+    <div class="ccontainer">
+      <p>
+         Call us at
+      </p>
+      <a href="tel:0297707555">
+        <p><u>(02) 9770 7555</u>
+        </p>
+      </a>
+      <p>
+        Follow us on our Socials
+      </p>
+      <!-- Add font awesome icons Referenced from: https://www.w3schools.com/howto/howto_css_social_media_buttons.asp-->
+      <a href="https://www.facebook.com/RSPCANewSouthWales" target="_blank" class="fa fa-facebook"></a>
+      <a href="https://twitter.com/RSPCANSW" target="_blank" class="fa fa-twitter"></a>
+      <a href="https://www.youtube.com/user/RSPCANSWMedia" target="_blank" class="fa fa-youtube"></a>
+      <a href="https://www.instagram.com/rspcansw/?hl=en" target="_blank" class="fa fa-instagram"></a>
     </div>
 
     <!-- Nav buttons at bottom of page -->
