Changed some text, adjusted the margin of the dropdown menu to ensure usability on desktop

--- a/step4.html
+++ b/step4.html
@@ -88,7 +88,7 @@
       <input type="date" id="birthday" name="bday"
       value="xxxx-xx-xx"
       min="2004-11-26" max="2018-12-31">
-      <p id class="p1">Upload your CV (references of relavant previous experience)</p>
+      <p id class="p1">Upload your CV with previous relevant experience (if available)</p>
       <input type="file" id="cv" name="filename">
       <input class="submit" type="submit" value="Submit">
     </form> 
