--- a/step5.html
+++ b/step5.html
@@ -95,7 +95,7 @@
 
     <div class="pcontainer">
       <p>
-        You will recieve an email from RSPCA NSW with the available dates and times of the required in-person training (if any) for your chosen role(s) as well as a link for the required induction(s).
+        You will recieve an email from RSPCA NSW with the available dates and times of the required in-person training (if required for your chosen role/s), as well as a link for the required induction/s.
       </p>
       <p>
         Please complete your in-person training and/or online inductions before arriving for your first day of volunteering. We can not allow you to begin volunteering for us without the proper preperation.
