Added Image alts

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <a href="https://www.rspcansw.org.au/" target="_blank">
       <div class="logo">
         <figure>
-          <img src="Images/rspcansw.jpg" alt="RSPCALogo" 
+          <img src="Images/rspcansw.jpg" alt="RSPCA NSW Logo - blue text with two green paws next to it" 
           style="width: 100px height: 50px">
         </figure>
       </div>
@@ -73,7 +73,7 @@
     
     <!--Homepage image-->
     <div class="HomeImage">
-      <img src="Images/Manwalkdog.jpg" alt="Manwalkingdog">
+      <img src="Images/Manwalkdog.jpg" alt="Man walking dog on sidewalk">
     </div>
 
     <!--Page header-->
